--- a/style.css
+++ b/style.css
@@ -1,377 +1,471 @@
-body{
-    margin: 0px;
-    padding: 0px;
-} 
-
-header{
-    display: flex; 
-    align-items: center;
-    justify-content: space-between; 
-    padding: 20px 20px 20px 30px; 
-    background-color: #1d2951; 
-
+body {
+  margin: 0px;
+  padding: 0px;
 }
 
-ul{ 
-
-    background-color: #1d2951; 
-    padding: 15px;
-    margin: 0px; 
-    list-style-type: none;
-    display: flex; 
-    align-items: center;
-    
-
-} 
-
-
-.get-button{
-    background-color: #42a5d9;
-    float: right; 
-    border: 1px solid #42a5d9; 
-   padding: 12px 30px 12px 30px;
-    color: aliceblue;
-    font-size: 14px; 
-    
-}  
-
-.get-button:hover{
-    text-decoration: underline;
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 20px 20px 30px;
+  background-color: #1d2951;
 }
 
-.login-button:hover{
-    background-color: white;
-    color: #1d2951;
+ul {
+  background-color: #1d2951;
+  padding: 15px;
+  margin: 0px;
+  list-style-type: none;
+  display: flex;
+  align-items: center;
 }
 
-button{
-    padding: 10px; 
-    background-color: transparent; 
-    border: 1px solid white; 
-    border-radius: 30px; 
-    font-size: 15px; 
-    
-} 
-
-.login-button{
-    color: white; 
-    float: right;
-    padding-left: 30px;
-    padding-right: 30px; 
-    margin-right: 20px;
+h1 {
+  font-size: 35px;
+  font-weight: 500;
 }
 
-a{
-    color: aliceblue; 
-    text-decoration: none; 
-    margin: 30px 55px 30px 0px;
-    font-size: 20px;
-    font-weight: 400;
-    
-
-} 
-
-li a:hover{
-    color: #42a5d9;
+p {
+  font-size: 20px;
+  font-weight: 300;
 }
- 
-.jumbo{
-    height: 90vh;
-    background-color: #1d2951; 
-    display: flex;  
-    flex-direction: row;
-    justify-content: center; 
-    align-items: center;
-} 
-
-.video{
-    margin-left: 50px;
-    
-    
-} 
-
-.details{
-    height: 600px;
-    width: 600px;
-    margin-right: 50px;
-    padding: 10px; 
-    display: flex; 
-    align-items: start;
-    justify-content: center; 
-    flex-direction: column;
-    color: azure;
-}  
-
-.details h3{
-    font-size: 50px;  
-    font-weight: bold;
-    color: white;
-    margin: 0px;
-} 
-
-.details p{
-    font-weight: 900; 
-    margin: 30px 0px 30px 0px;
+.get-button {
+  background-color: #42a5d9;
+  float: right;
+  border: 1px solid #42a5d9;
+  padding: 12px 30px 12px 30px;
+  color: aliceblue;
+  font-size: 14px;
 }
 
-.jumbo-buttons{
-
-    display: flex;
-    flex-direction: row; 
-    
+.get-button:hover {
+  text-decoration: underline;
 }
 
-.get-new-button{
-    color : #d4d8e6;
-    border: 1px solid #42a5d9;
-    background-color: #42a5d9; 
-    margin-right: 20px; 
-    font-weight: 700;
+.login-button:hover {
+  background-color: white;
+  color: #1d2951;
 }
 
-.code-reviews{
-    padding: 30px; 
-    display: flex; 
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #f7f7f7;
+button {
+  padding: 10px;
+  background-color: transparent;
+  border: 1px solid white;
+  border-radius: 30px;
+  font-size: 15px;
 }
 
+.login-button {
+  color: white;
+  float: right;
+  padding-left: 30px;
+  padding-right: 30px;
+  margin-right: 20px;
+}
+
+a {
+  color: aliceblue;
+  text-decoration: none;
+  margin: 30px 55px 30px 0px;
+  font-size: 20px;
+  font-weight: 400;
+}
+
+li a:hover {
+  color: #42a5d9;
+}
+
+.jumbo {
+  height: 90vh;
+  background-color: #1d2951;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.video {
+  margin-left: 50px;
+}
+
+.details {
+  height: 600px;
+  width: 600px;
+  margin-right: 50px;
+  padding: 10px;
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  flex-direction: column;
+  color: azure;
+}
+
+.details h3 {
+  font-size: 50px;
+  font-weight: bold;
+  color: white;
+  margin: 0px;
+}
+
+.details p {
+  font-weight: 900;
+  margin: 30px 0px 30px 0px;
+}
+
+.jumbo-buttons {
+  display: flex;
+  flex-direction: row;
+}
+
+.get-new-button {
+  color: #d4d8e6;
+  border: 1px solid #42a5d9;
+  background-color: #42a5d9;
+  margin-right: 20px;
+  font-weight: 700;
+}
+
+.code-reviews {
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #f7f7f7;
+}
+/* 
 .code-reviews h1{
     font-size: 30px;
     font-weight: 500; 
 
 
+} */
+
+.code-reviews p {
+  font-size: 20px;
+  font-weight: 100;
 }
 
-.code-reviews p{
-    font-size: 20px;
-    font-weight: 100;
+.reviews {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
 }
 
-.reviews{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;  
-    margin-top: 30px;
-    
+#box {
+  width: 400px;
+  margin: 10px 30px 10px 0px;
 }
 
-#box{
-    width: 400px; 
-    margin:10px 30px 10px 0px ;
+.importance {
+  padding: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-.importance{
-    padding: 30px;
-    display: flex; 
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+.remarks {
+  display: flex;
+  flex-direction: row;
+  text-align: center;
 }
 
-.remarks{
-    display: flex;
-    flex-direction: row; 
-    text-align: center;
-}
-
-.remarks h1{
+/* .remarks h1{
     font-size: 30px;
     font-weight: 500; 
 
-}
+} */
 
-.remarks  p{
-   font-weight: 600;
-   margin-top: 30px;
-   margin-bottom: 30px;
-}
-
-.graham-award{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #1d2951; 
-    padding-bottom: 40px;
-}
-
-.award-title{
-    width: 50%;
-}
-
-.award-title h1{
-    font-size: 35px;
-    font-weight: 500;
+.remarks p {
+  font-weight: 600;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .graham-award {
-    text-align: center;
-    margin-top: 40px;
-     
-    
-    color: white; 
-    
-    
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #1d2951;
+  padding-bottom: 40px;
 }
 
-.award-info{
-    display: flex;
-    flex-direction: row;
-    margin-top: 30px ;
+.award-title {
+  width: 50%;
 }
 
-.award-image{
- margin:0px 30px 0px 0px;
-    
-}
-.award-details{
-   margin: 0px 0px 0px 30px;
-   width: 600px;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   color: white;
-   font-size: 20px; 
-    font-weight: 300;
-} 
-
-.simplyfing-code-reviews{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.award-title h1 {
+  font-size: 35px;
+  font-weight: 500;
 }
 
+.graham-award {
+  text-align: center;
+  margin-top: 40px;
+
+  color: white;
+}
+
+.award-info {
+  display: flex;
+  flex-direction: row;
+  margin-top: 30px;
+}
+
+.award-image {
+  margin: 0px 30px 0px 0px;
+}
+.award-details {
+  margin: 0px 0px 0px 30px;
+  width: 600px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 20px;
+  font-weight: 300;
+}
+
+.simplyfing-code-reviews {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+/* 
 .simplyfing-code-reviews h1{
     font-size: 35px;
     font-weight: 300;
+} */
+
+.reviews-info {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 40px;
 }
 
-.reviews-info{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding-bottom: 40px;
+.reviews-details {
+  margin: 40px;
+  width: 500px;
 }
 
-.reviews-details{
-    margin: 40px;
-    width: 500px;
+.reviews-details p {
+  font-size: 20px;
+  font-weight: 300;
 }
 
-.reviews-details p{
-    font-size: 20px; 
-    font-weight: 300;
+.reviews-image {
+  margin: 40px;
+  box-shadow: 10px 5px 5px rgba(66, 65, 65, 0.541);
 }
 
-.reviews-image{
-    margin: 40px;
-    box-shadow: 10px 5px 5px rgba(66, 65, 65, 0.541);
-    
+.code-storage {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: #f7f7f7;
 }
 
-.code-storage{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    background-color: #f7f7f7;
+.code-storage h1 {
+  margin-top: 40px;
+
+  font-size: 35px;
+  font-weight: 500;
 }
 
-.code-storage h1{
-    
-    margin-top: 40px;
-     
+.no-code-storage {
+  width: 600px;
+  margin: 50px 0px 50px 40px;
+}
+
+.no-code-storage p {
+  font-size: 20px;
+  font-weight: 300;
+}
+.no-code-storage-image {
+  margin: 50px 40px 50px 0px;
+  box-shadow: 10px 5px 5px rgba(66, 65, 65, 0.479);
+}
+
+.slack {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+.slack-integration {
+  width: 600px;
+  margin: 50px 40px 50px 0px;
+}
+
+/* .slack-integration h1{
     font-size: 35px;
     font-weight: 500;
     
+} */
+
+/* .slack-integration p {
+  font-size: 20px;
+  font-weight: 300;
+} */
+
+.integration-image {
+  margin: 50px 0px 50px 40px;
+  box-shadow: 10px 5px 5px rgba(66, 65, 65, 0.479);
 }
 
-.no-code-storage{
-    width: 600px; 
-    margin: 50px 0px 50px 40px;
+.dashboard {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: #f7f7f7;
 }
 
-.no-code-storage p{
-    font-size: 20px; 
-    font-weight: 300;
-}
-.no-code-storage-image{
-    margin: 50px 40px 50px 0px;
-    box-shadow: 10px 5px 5px rgba(66, 65, 65, 0.479);
+.dashboard-image {
+  margin: 50px 40px 50px 0px;
+  box-shadow: 10px 5px 5px rgba(66, 65, 65, 0.479);
 }
 
-.slack{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
+.dashboard-details {
+  width: 600px;
+  margin: 50px 0px 50px 40px;
 }
 
-
-
-.slack-integration{
-    width: 600px; 
-    margin: 50px 40px 50px 0px;
-}
-
-.slack-integration h1{
+/* .dashboard-details h1{
     font-size: 35px;
     font-weight: 500;
+} */
+
+/* .dashboard p {
+  font-size: 20px;
+  font-weight: 300;
+} */
+
+.main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+/* .main h1{
+    font-size: 35px;
+    font-weight: 500;
+}  */
+
+.main-grid {
+  width: 75%;
+  height: 80vh;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.grid {
+  margin: 0px 45px 0px 45px;
+}
+
+.security-standards {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: #f7f7f7;
+}
+
+.security-info {
+  display: flex;
+  flex-direction: row;
+  justify-content: center; 
+  margin: 40px 0px 40px 0px;
+
+}
+
+.security-types {
+  text-align: center;
+  width: 600px;
+}
+
+.security-types p{
+    font-size: larger !important;
+    font-weight: 100 !important;
     
 }
 
-.slack-integration p{
-    font-size: 20px; 
-    font-weight: 300;
-}
-
-.integration-image{ 
-    margin: 50px 0px 50px 40px;
-    box-shadow: 10px 5px 5px rgba(66, 65, 65, 0.479);
-}
-
-.dashboard{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;  
-    background-color: #f7f7f7;
-}
-
-.dashboard-image{
-    margin: 50px 40px 50px 0px;
-    box-shadow: 10px 5px 5px rgba(66, 65, 65, 0.479);
-}
-
-.dashboard-details{
-    width: 600px; 
-    margin: 50px 0px 50px 40px;
+.security-types h2{
+    font-size: larger !important;
+    font-weight: 800 !important;
+    
 } 
 
-.dashboard-details h1{
-    font-size: 35px;
-    font-weight: 500;
+.security-types img{
+    color: #42a5d9 !important;
+}
+.security-standards p{
+    margin-top: 5px;
+    font-size: 15px;
+    font-weight: 530; 
 }
 
-.dashboard p{
-    font-size: 20px; 
-    font-weight: 300;
+.security-standards h1{
+    margin-bottom: 0px;
 }
 
-.main{
+
+
+.owasp{
+    margin: 0px 40px 0px 0px;
+}
+
+.sans{
+    margin: 0px 0px 0px 40px;
+}
+
+.footer{
+    background-color: #1d2951;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: start;
+    padding: 100px 0px 60px 200px;
+    color: #f7f7f7;
 }
 
-.main h1{
-    font-size: 35px;
-    font-weight: 500;
+.icons{
+    display: flex;
+    flex-direction: row;
+
 }
+.icon-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50px;
+    height: 50px;
+    width: 50px;
+    background-color: #f7f7f7;
+    margin: 40px 10px 40px 0px ;
+    color: #1d2951 !important;
+    
+}
+.icon-container h1{
+    font-size: 20px;
+    font-weight: 800;
+
+}
+
+.footer p{
+    margin: 0px;
+}
+
+
